--- a/index.html
+++ b/index.html
@@ -14,5 +14,25 @@
 <body>
 	<button class="button">SORT</button>
 
+	<p> 
+		Unfortunately, I wasn't able to build the visualization I wanted, however I will explain in detail what I had hoped
+		to achieve. I chose a data set about student enrollment at UW (Seattle campus) in 2015, which is broken down by 
+		ethnicities. My intended message for this data visualization was to highlight the state of diversity on campus by 
+		showing which minority groups are especially miniscule and which ones are larger by contrast. Also, a layer within the data that is interesting for drawing
+		comparisons is the diversity of Asian ethnicities; there are various Southeast Asian ethnic groups in the data set. 
+		<br>
+		<br>
+		I chose a pie chart layout for two main reasons: the first being that pie charts are useful for representing how individual
+		parts add up to a whole (a grand total, which is the student body in this case); and the second reason is that the elementary
+		perceptual task of judging data based on angle and area are accurate ways to perceive this type of information.
+		<br> 
+		<br>
+		I should also add that I intended to have a "sort" button that breaks up the first pie chart to reveal the second layer of 
+		data that I found interesting. In addition to showing the total populations for ethnic groups, the data set breaks down these totals
+		into male/female representations. Visually, I wanted the first pie chart's slices to drift outwards and each slice would then
+		break into two (one for male numbers, and the other for female). 
+	
+	</p>
+
 </body>
 </html>
